--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Poppins&display=swap');
 
-/*font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;*/
-
 :root {
   --Violet: hsl(257, 40%, 49%);
   --Soft-Magenta: hsl(300, 69%, 71%);
@@ -12,10 +9,12 @@ font-family: 'Poppins', sans-serif;*/
 *::before,
 *::after {
   box-sizing: border-box;
+  vertical-align: baseline;
 }
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 html,
@@ -28,26 +27,95 @@ body {
   -webkit-font-smoothing: antialiased;
   background-image: url('images/bg-desktop.svg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto 100%;
   background-color: var(--Violet);
+  display: block;
 }
 
-img,
-svg {
+#container {
+  width: 100%;
+  color: white;
+  padding: 5rem 7.5rem;
+  display: grid;
+  min-height: 100vh;
+  place-content: center;
+}
+
+img {
   display: block;
   max-width: 100%;
 }
 
-button {
-  font: inherit;
+header {
+  display: flex;
+  width: 100%;
+  padding-bottom: 70px;
 }
 
-p,
+.section {
+  display: grid;
+  grid-template-columns: 1.3fr .87fr;
+}
+
+.illustration-mockup {
+  width: 53rem;
+}
+
+#content {
+  padding-top: 60px;
+  padding-left: 60px;
+}
+
 h1 {
-  overflow-wrap: break-word;
+  font-size: 2.5rem;
+  padding-bottom: 25px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.description {
+  padding-bottom: 20px;
+  color: lightgrey;
+  font-family: 'Open Sans', sans-serif;
+}
+
+button {
+  font: inherit;
+  padding: 10px 50px;
+  border-radius: 40px;
+  border: none;
+  color: var(--Violet);
+  box-shadow: 0px 5px 10px rgba(37, 37, 37, 0.671);
+  font-family: 'Poppins', sans-serif;
+}
+.line-break:after {
+  content: "\A";
+  white-space: pre;
 }
 
 #socials {
-  
-  
+display: flex;
+width: 100%;
+justify-content: flex-end;
+align-items: flex-start;
+grid-column-start: 2;
+block-size: 10px;
+gap: 15px;
+}
+
+.facebook {
+  border: solid 1px white;
+  border-radius: 50%;
+  padding: .3rem .8rem;
+}
+
+.twitter {
+  border: solid 1px white;
+  border-radius: 50%;
+  padding: .3rem .6rem;
+}
+
+.instagram {
+  border: solid 1px white;
+  border-radius: 50%;
+  padding: .3rem .6rem;
 }
